@@ -1,6 +1,9 @@
 MD5 0e873329d73cd3a6be4cab9c75818b49 texlive-basicbin-2007.tar.bz2 9408579
 RMD160 91b915d66116377afb45d6b5b40d391630e4c54c texlive-basicbin-2007.tar.bz2 9408579
 SHA256 2c41a7962f97f8f9a89bbb5954618a9369bdbf4c2e5dbf43ecb5d9c599c884eb texlive-basicbin-2007.tar.bz2 9408579
+MD5 ca80419f3bdd45ce393c15efc5c23399 texlive-binextra-2007.tar.bz2 548692
+RMD160 aeda2d9bdfa78972080b73a0fb6cf4a5e88fda0a texlive-binextra-2007.tar.bz2 548692
+SHA256 d47847b6eeb8e639b81296a882e3a0796274fdfa025e03fc595b2e9b2ff7aa83 texlive-binextra-2007.tar.bz2 548692
 MD5 d539b5a6b9f96cc2616f09f4543394c8 texlive-source-2007.tar.bz2 31078286
 RMD160 496cb3fa3c5cd9b2ea5da3b0bced67a2b5afe7b9 texlive-source-2007.tar.bz2 31078286
 SHA256 96c12147ea9717539553eb6b3be52c2df6163ca617dccc71282ccd39c2e5773b texlive-source-2007.tar.bz2 31078286
